--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>a tomar por culo el personal</title>
+    <title>Van pidgy's official blog</title>
 </head>
 <body>
     <div>
-        <h1><a href="/"> a tomar</a></h1>
-        <h1><a href="/">por culo</a></h1>
-        <h1><a href="/">el personal</a></h1>
+        <h1><a href="/"> All you have to know about our saviour: VAN PIDGY</a></h1>
+
     </div>
     {% for post in posts %}
         <div>
