--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,21 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Van pidgy's official blog</title>
-</head>
-<body>
-    <div>
-        <h1><a href="/"> All you have to know about our saviour: VAN PIDGY</a></h1>
-
-    </div>
-    {% for post in posts %}
-        <div>
-            <p>published: {{ post.published_date }}</p>
-            <h1><a href="">{{ post.title }}</a> </h1>
-            <p>{{post.text|linebreaksbr }}</p>
-        </div>
-        {{ post }}
-    {% endfor %}
-</body>
+{% load staticfiles %}
+<html >
+    <head>
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <meta charset="UTF-8">
+        <title>Van pidgy's official blog</title>
+    </head>
+    <body class="body">
+            <div class = "image"></div>
+            <div class="page-header">
+                <h1> All you have to know about our saviour: VAN PIDGY</h1>
+            </div>
+            <div class = "link">
+                <h3><a href="https://github.com/pablocesar87/Van-Pidgy"> Van Pidgy's free code!</a> </h3>
+            </div>
+            <div class="content container">
+                <div class="row">
+                    <div class="col-md-8">
+                        {% for post in posts %}
+                            <div class = "post">
+                                <div class="date">
+                                    {{ post.published_date }}
+                                </div>
+                                <h1>{{ post.title }}</h1>
+                                <p class="p">{{ post.text|linebreaksbr }}</p>
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+    </body>
 </html>
