--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,6 +11,7 @@
             <div class = "image"></div>
             <div class="page-header">
                 <h1> All you have to know about our saviour: VAN PIDGY</h1>
+                <h4><a href="{% url 'post_list' %}">Back to the beggining<a></h4>
             </div>
             <div class = "link">
                 <h3><a href="https://github.com/pablocesar87/Van-Pidgy"> Van Pidgy's free code!</a> </h3>
