Added posting and post edition

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -34,7 +34,7 @@
     }
 
    .body {
-    background-image: url('/static/images/forest.jpg');
+    background-color: green;
     background-repeat: no-repeat;
     background-size: 100%;
    }
