--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,6 +12,7 @@
             <div class="page-header">
                 <h1> All you have to know about our saviour: VAN PIDGY</h1>
                 <h4><a href="{% url 'post_list' %}">Back to the beggining<a></h4>
+                <a  class=new_post" href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span> New Post </a>
             </div>
             <div class = "link">
                 <h3><a href="https://github.com/pablocesar87/Van-Pidgy"> Van Pidgy's free code!</a> </h3>
